crates/rs_html_parser/tests/snapshots/html5lib_test3_test__tests__lt_excl_mark_doctypea_public_apos1_apos1_lt.snap
---
source: crates/rs_html_parser/tests/html5lib_test3_test.rs
expression: "parser_test(r####\"<!DOCTYPEa PUBLIC''<\"####)"
---
[
    Token {
        data: "DOCTYPEa PUBLIC''<",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
